datatable for patients and edit page for patient details

--- a/meditor_server/portals/templates/doctor_portal.html
+++ b/meditor_server/portals/templates/doctor_portal.html
@@ -12,9 +12,9 @@
                     "redirect_link":"/utils/add_patient"
                 },
                 "change_patient":{
-                    "display_name":"Change Patient Details",
+                    "display_name":"View Patients Details",
                     "display_picture":"",
-                    "redirect_link":"/utils/change_patient"
+                    "redirect_link":"/utils/patients_details"
                 },
                 "add_pill":{
                     "display_name":"Add New Pill Details",
