UI - major changes

--- a/meditor_server/portals/templates/doctor_portal.html
+++ b/meditor_server/portals/templates/doctor_portal.html
@@ -24,7 +24,7 @@
                 "change_pill":{
                     "display_name":"Change Pill Details",
                     "display_picture":"",
-                    "redirect_link":"/utils/change_pill"
+                    "redirect_link":"/utils/change_pill?pill_id=1"
                 }
             }
 
